refs/ps/testcases/A3/Testcases/Error/tc9.c
void main()
{
    string c;
    int a,b;
    a = b>c?1:1;
    a = 1>1?b:c;
}